--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,20 @@
 {% extends 'base_generic.html' %}
+
+{%load crispy_forms_tags%}
+
 {%block title %} Create an account {%endblock%}
 {%block content%}
 <form action="{% url 'register' %}" method="POST" >
     {% csrf_token %}
-    {{user_form}}
-    {{person_form}}
+
+
+    <p>
+        {{user_form|crispy}}
+        {{person_form|crispy}}
+        
+   
+    </p>
+
 
     
     <button type="submit" class="btn btn-success">Register</button>
