--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -12,11 +12,62 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h4>Hejka</h4>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin">admin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/api">API</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/chores">Chore List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/create">Create Chore</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        
+      </ul>
+      
+    </div>
+<div class="d-flex fw-bold"> 
+  {% if user.is_authenticated %}
+    Logged in as: {{user.username}}
+    <a class="link-primary" href="{% url 'logout' %}"> Log out</a>
+
+
+
+    {% else %}
+
+    <a class="link-primary" href="{% url 'login' %}">Log In</a>
+  {% endif %} 
+</div>
+  </div>
+</nav>
+
+
     <div class="container">
         {% block content %}
         {% endblock %}
     </div>
+  </div>
+  
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
