--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,9 +1,10 @@
 {% extends '../base_generic.html' %}
+{%load crispy_forms_tags%}
 {%block title %} Create an account {%endblock%}
 {%block content%}
 <form method="POST">
     {% csrf_token %}
-    {{form.as_p}}
+    {{form|crispy}}
     <button type="submit" class="btn btn-success">Login</button>
 </form>
 {% endblock content %}
