--- a/templates/chore_create.html
+++ b/templates/chore_create.html
@@ -1,11 +1,15 @@
 {% extends 'base_generic.html' %}
+{%load crispy_forms_tags%}
 {%block title %} Create a new chore: {%endblock%}
 {%block content%}
 <div>
     <h1>Create a new chore: </h1>
-
+    <form method="post">
+    {% csrf_token %}
+        {{form|crispy}}
+    <button type="submit" class="btn btn-success">Submit the task</button>
+    </form>
     
-
 
 </div>
 {% endblock content %}
