--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,6 +2,20 @@
 {%load crispy_forms_tags%}
 {%block title %} Create an account {%endblock%}
 {%block content%}
+{% if messages %}
+<div class="alert alert-danger" role="alert">
+  
+  
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
+</div>
+
+
 <form method="POST">
     {% csrf_token %}
     {{form|crispy}}
